fix(layout): remove lang from <html> to disable Chrome translate

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@ function escapeHTML(str) {
 }
 %>
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
