feat(app): set page viewport width to 1024px when responsive layout is not supported

--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,7 @@ function escapeHTML(str) {
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -56,7 +55,7 @@ function escapeHTML(str) {
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link href="https://fonts.googleapis.com/css?family=Saira:500&display=block" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira:500&display=block" rel="stylesheet"> -->
 
     <script>
     window._appConfig = <%= safeStringify(global.appConfig) %>;
