feat(layout): add preview of the shape of the top menu to the initial HTML

--- a/public/index.html
+++ b/public/index.html
@@ -183,6 +183,23 @@ htmlWebpackPlugin.tags.bodyTags.forEach(tag => {
     }
   </style>
 
+  <!-- Show the top menu's border and shadow as a preview -->
+  <style id="app-preview-style">
+    #root::before {
+      content: " ";
+      height: 47px;
+      width: 100vw;
+      border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+      box-shadow: 0 1px 2px 0 rgba(34, 36, 38, 0.15);
+      box-sizing: content-box;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 102; /* Same as Semantic UI's sidebar menu */
+      pointer-events: none;
+    }
+  </style>
+
   <!-- Initialize application config -->
   <script>
     window.appConfig = <%= safeStringify(appConfig) %>;
