style: change the index.html's head comment

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,4 @@
-<!--
-/////////////////////////////////////////////
-//        Designed & Coded by Menci        //
+<!--        Made with 💖 by Menci
 /////////////////////////////////////////////
 //                                         //
 //                                         //
