refactor: remove manifest.json and apple-touch-icon images

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,7 @@ function safeStringify(object) {
 <head>
   <meta charset="utf-8" />
 
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="theme-color" content="#FFFFFF" />
 
   <script>
     var addLinkTag = (function () {
@@ -93,8 +92,6 @@ function safeStringify(object) {
       }
 
       addLinkTag("icon", publicPath + "favicon.ico");
-      addLinkTag("apple-touch-icon", publicPath + "logo192.png");
-      addLinkTag("manifest", publicPath + "manifest.json");
 
       return addLinkTag;
     })();
