fix(*): add target="_blank" and rel="noreferrer noopener" to external URLs

--- a/public/index.html
+++ b/public/index.html
@@ -315,7 +315,7 @@ const gitRepoInfo = htmlWebpackPlugin.options.gitRepoInfo;
     </div>
     <div id="error-footer">
       <code>
-        Powered by <a href="https://github.com/syzoj" target="_blank">SYZOJ</a><br>
+        Powered by <a href="https://github.com/syzoj" target="_blank" rel="noreferrer noopener">SYZOJ</a><br>
         (version <%= gitRepoInfo.abbreviatedSha %>)
       </code>
     </div>
